side nav example

--- a/Dashboard.html
+++ b/Dashboard.html
@@ -59,12 +59,14 @@
             <li><a href="http://getbootstrap.com/getting-started">Getting Started</a></li>
             <li><a href="http://bootswatchr.com/create#!/edit/b986e6cf">Bootswatchr Customize</a></li>
             <li><a href="https://www.bootpress.org/bootstrap/themeroller.html">Bootpress Customize</a></li>
-			<li><a href="https://bootswatch.com/default/#typography">bootswatch.com</a></li>
+			      <li><a href="https://bootswatch.com/default/#typography">bootswatch.com</a></li>
 			
             <li class="divider"></li>
             <li><a href="#">Separated link</a></li>
             <li class="divider"></li>
             <li><a href="#">One more separated link</a></li>
+            <li class="divider"></li>
+            <li><a href="sidenav.html">Side Nav</a></li>
           </ul>
         </li>
       </ul>
