--- a/Index.html
+++ b/Index.html
@@ -50,6 +50,8 @@
 							<li><a href="modal.html">Modal</a></li>
 							<li class="divider"></li>
 							<li><a href="#">One more separated link</a></li>
+							 <li class="divider"></li>
+            <li><a href="sidenav.html">Side Nav</a></li>
 						</ul>
 					</li>
 				</ul>
